# drf_telebot_hakaton

./: .gitignore  README.md  default.conf  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  config.py  emotions.json  food.json  load_data_in_db.py  videos.json
api/botapp/: admin.py  docs.py  models.py  serializers.py  tests.py  urls.py  views.py
api/core/: settings.py  urls.py
telebot/: Dockerfile  main.py
telebot/commands/: base.py  callbacks.py  commands.py
telebot/commands/utils/: callback_factory.py  keyboards.py
